# byoeb

./: .env.local.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  LICENSE  LICENSE-CODE  README.md  SECURITY.md  SUPPORT.md  app.py  config.yaml  conftest.py  cron.txt  docker-compose.wizard.yml  docker-compose.yml  keys.env  requirements.txt  setup_wizard.py  test_async_migration_validation.py
byoeb-v1/byoeb/: Dockerfile  README.md  keys.env  pyproject.toml
byoeb-v1/byoeb-core/: pyproject.toml
byoeb-v1/byoeb-core/byoeb_core/channel/: base.py
byoeb-v1/byoeb-core/byoeb_core/convertor/: audio_convertor.py
byoeb-v1/byoeb-core/byoeb_core/data_parser/: llama_index_text_parser.py
byoeb-v1/byoeb-core/byoeb_core/databases/mongo_db/: base.py
byoeb-v1/byoeb-core/byoeb_core/llms/: base.py
byoeb-v1/byoeb-core/byoeb_core/media_storage/: base.py
byoeb-v1/byoeb-core/byoeb_core/message_queue/: base.py
byoeb-v1/byoeb-core/byoeb_core/models/byoeb/: message_context.py  message_status.py  response.py  user.py
byoeb-v1/byoeb-core/byoeb_core/models/media_storage/: file_data.py
byoeb-v1/byoeb-core/byoeb_core/models/vector_stores/: chunk.py
byoeb-v1/byoeb-core/byoeb_core/translators/speech/: base.py
byoeb-v1/byoeb-core/byoeb_core/vector_stores/: base.py
byoeb-v1/byoeb-core/tests/models/: test_message_context.py  test_user.py
byoeb-v1/byoeb-core/tests/models/vector_stores/: test_chunk_metadata.py
byoeb-v1/byoeb-integrations/: pyproject.toml
byoeb-v1/byoeb-integrations/byoeb_integrations/: __init__.py  langfuse_bindings.py  test_keys.env
byoeb-v1/byoeb-integrations/byoeb_integrations/channel/tests/: test_async_whatsapp.py
byoeb-v1/byoeb-integrations/byoeb_integrations/channel/whatsapp/: convert_message.py  request_payload.py  validate_message.py
byoeb-v1/byoeb-integrations/byoeb_integrations/databases/tests/: test_async_azure_cosmos_mongo_db.py
byoeb-v1/byoeb-integrations/byoeb_integrations/embeddings/chroma/: llama_index_azure_openai.py  llama_index_openai.py
byoeb-v1/byoeb-integrations/byoeb_integrations/embeddings/llama_index/: openai.py
byoeb-v1/byoeb-integrations/byoeb_integrations/embeddings/tests/: test_embeddings_chroma.py  test_embeddings_openai.py
byoeb-v1/byoeb-integrations/byoeb_integrations/llms/azure_openai/: async_azure_openai.py
byoeb-v1/byoeb-integrations/byoeb_integrations/llms/llama_index/: llama_index_azure_openai.py  llama_index_openai.py
byoeb-v1/byoeb-integrations/byoeb_integrations/llms/tests/: _test_llama_index_generic.py  _test_llms_generic.py  test_llms_azure_openai.py  test_llms_openai.py
byoeb-v1/byoeb-integrations/byoeb_integrations/media_storage/azure/: async_azure_blob_storage.py
byoeb-v1/byoeb-integrations/byoeb_integrations/media_storage/local/: local_file_storage.py
byoeb-v1/byoeb-integrations/byoeb_integrations/media_storage/tests/: test_media_storage_azure.py
byoeb-v1/byoeb-integrations/byoeb_integrations/message_queue/azure/: async_azure_storage_queue.py
byoeb-v1/byoeb-integrations/byoeb_integrations/message_queue/kafka/: async_kafka_queue.py
byoeb-v1/byoeb-integrations/byoeb_integrations/message_queue/redis/: async_redis_queue.py
byoeb-v1/byoeb-integrations/byoeb_integrations/message_queue/tests/: test_message_queue_azure.py
byoeb-v1/byoeb-integrations/byoeb_integrations/vector_stores/: related_questions.py
byoeb-v1/byoeb-integrations/tests/media_storage/: test_local_file_storage.py
byoeb-v1/byoeb-integrations/tests/message_queue/: test_async_redis_queue.py
byoeb-v1/byoeb/byoeb/apis/: admin.py  auth.py  background_jobs.py  channel_register.py  chat.py  health.py  knowledge_base.py  user.py
byoeb-v1/byoeb/byoeb/application_logger/: azure_app_insights.py
byoeb-v1/byoeb/byoeb/background_jobs/: app_config.json  config.py  dependency_setup.py  send_dyk.py
byoeb-v1/byoeb/byoeb/chat_app/: app_config.json  bot_config.json  bot_config.yaml  logging.yaml  run.py
byoeb-v1/byoeb/byoeb/constants/: __init__.py  error_messages.py  feature_enums.py  onboarding_text.py  user_enums.py
byoeb-v1/byoeb/byoeb/factory/: channel.py  message_producer.py  mongo_db.py
byoeb-v1/byoeb/byoeb/handler/: channel_register.py  message_producer.py  user.py
byoeb-v1/byoeb/byoeb/kb_app/: app_config.json  prompts.json  run.py
byoeb-v1/byoeb/byoeb/listener/: message_consumer.py
byoeb-v1/byoeb/byoeb/models/: consensus.py  dyk.py  experiment.py  message_category.py
byoeb-v1/byoeb/byoeb/observability/: __init__.py  langfuse_client.py  langfuse_otel_export.py  tracing.py
byoeb-v1/byoeb/byoeb/repositories/: __init__.py  auth_repository.py  auth_tenant_repository.py  base_repository.py  dyk_repository.py  example_usage.py  message_repository.py  mongodb_auth_repository.py  mongodb_auth_tenant_repository.py  mongodb_base_repository.py  mongodb_dyk_repository.py  mongodb_message_repository.py  mongodb_user_repository.py  repository_factory.py  user_repository.py
byoeb-v1/byoeb/byoeb/scripts/: auth.py  compile_monthly_logs.py  compile_monthly_logs_idk_categorization.py  create_auth_tenant.py  create_auth_user.py  data_extraction.py  export_hindi_users.py  export_validation_dump.py  migrate_timestamps_to_datetime.py  onboarding.py  ragas_model_comparison_v2.py  release_qa_regression_set.json  run_release_qa_benchmark.py
byoeb-v1/byoeb/byoeb/services/auth/: __init__.py  (+9 more)
byoeb-v1/byoeb/byoeb/utils/: embedding_cache.py  response_cache.py  translate.json  utils.py
byoeb-v1/byoeb/docs/: deployment.md
byoeb-v1/byoeb/tests/: conftest.py  test_config_validation.py  test_message_producer.py  test_onboarding.py
byoeb-v1/byoeb/tests/background_jobs/: test_leaderboard.py
byoeb-v1/byoeb/tests/integration/: conftest.py  release_qa_regression_set.json  run_release_qa_benchmark.py  test_audio_message.py  test_early_return_already_onboarded.py  test_mcp.py  test_mcp_auth.py  test_message_history.py  test_message_producer.py  test_onboarding.py
byoeb-v1/byoeb/tests/unit/: test_audio_idk_confirmation.py  test_mongodb_user_repository_datetime_normalization.py
byoeb-v1/byoeb/tests/utils/: test_utils.py
(+207 files in other folders)
