[tool.poetry]
name = "byoeb-integrations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
exclude = ["**/tests/**", "**/tests"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "1.109.1"
chromadb = "0.5.23"
llama-index-embeddings-azure-openai = "0.4.1"
azure-storage-queue = "12.12.0"
azure-storage-blob = "12.24.0"
azure-cognitiveservices-speech = "1.41.1"
azure-ai-translation-text = "1.0.1"
motor = "3.6.0"
llama-index-vector-stores-chroma = "0.5.3"
azure-search-documents = "11.5.2"
byoeb-core = { git = "https://github.com/A4i-tech/byoeb.git", rev = "a4i/main", subdirectory = "byoeb-v1/byoeb-core" }
pytest-mock = "^3.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = {extras = ["toml"], version = "^7.10.5"}
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"

[tool.coverage.run]
branch = true
source = ["byoeb_integrations"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
omit = [
  "byoeb_integrations/**/tests/**",
  "byoeb_integrations/**/__init__.py",
]

[tool.pytest.ini_options]
addopts = "--cov=byoeb_integrations --cov-branch --cov-report=term-missing:skip-covered --cov-report=xml:coverage.xml --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
