[tool.poetry]
name = "byoeb-integrations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
exclude = ["**/tests/**", "**/tests"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "1.58.1"
chromadb = "0.5.23"
llama-index-embeddings-azure-openai = "0.2.5"
azure-storage-queue = "12.12.0"
azure-storage-blob = "12.24.0"
azure-cognitiveservices-speech = "1.41.1"
azure-ai-translation-text = "1.0.1"
pymongo = "^4.15.2"
llama-index-vector-stores-chroma = "0.3.0"
azure-search-documents = "11.5.2"
byoeb-core = {path = "../byoeb-core", develop = true}
pytest-mock = "^3.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = {extras = ["toml"], version = "^7.10.5"}
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"

[tool.coverage.run]
branch = true
source = ["byoeb_integrations"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
omit = [
  "byoeb_integrations/**/tests/**",
  "byoeb_integrations/**/__init__.py",
]

[tool.pytest.ini_options]
addopts = "--cov=byoeb_integrations --cov-branch --cov-report=term-missing:skip-covered --cov-report=xml:coverage.xml --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
