[tool.poetry]
name = "byoeb"
version = "0.1.0"
description = ""
authors = ["Rahul Sharma <rahul5982439@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
aiocache = "0.12.3"
byoeb-integrations = {path = "../byoeb-integrations", develop = true}
azure-monitor-opentelemetry = "1.8.3"
azure-monitor-events-extension = "0.1.0"
croniter = "6.0.0"
rapidfuzz = "3.13.0"
python-multipart = "0.0.20"
openpyxl = "3.1.5"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
fastmcp = "2.14.0"
apscheduler = "^3.11.0"
jinja2 = "^3.1.6"
matplotlib = "^3.8.0"
pysqlite3-binary = "^0.5.4"
pymilvus = {extras = ["milvus-lite"], version = "^2.6.4"}
mongomock-motor = "^0.0.36"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "--cov=byoeb",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html:htmlcov",
  "--cov-report=json:coverage.json",
  "--cov-report=xml:coverage.xml"
]
asyncio_mode = "auto"
