[tool.poetry]
name = "byoeb"
version = "0.1.0"
description = ""
authors = ["Rahul Sharma <rahul5982439@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.116.0"
aiocache = "0.12.3"
authlib = "^1.6.6"
passlib = {extras = ["argon2"], version = "^1.7.4"}
byoeb-integrations = {path = "../byoeb-integrations", develop = true}
azure-monitor-opentelemetry = "1.8.3"
langfuse = "3.14.5"
azure-monitor-events-extension = "0.1.0"
croniter = "6.0.0"
rapidfuzz = "3.13.0"
pyyaml = "^6.0"
python-multipart = ">=0.0.27"
openpyxl = "3.1.5"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
fastmcp = ">=2.14.2,<3.0.0"
apscheduler = "^3.11.0"
jinja2 = "^3.1.6"
pymongo = "^4.15.2"
matplotlib = "^3.8.0"
mongomock-motor = "^0.0.36"
pysqlite3-binary = {version = "^0.5.4", platform = "linux"}
lancedb = "^0.26.0"
lance-namespace = "0.6.1"
grapheme = "^0.6.0"
pandas = "^3.0.2"
starlette = ">=0.49.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"
pytest-asyncio = "^1.1.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.0"
pip-audit = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "--cov=byoeb",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html:htmlcov",
  "--cov-report=json:coverage.json",
  "--cov-report=xml:coverage.xml"
]
asyncio_mode = "auto"
